<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Itemtitle"
            android:id="@+id/titleitem"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Quantitytitle"
            android:id="@+id/titlequantity"
            android:layout_weight="1.75" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Pricetitle"
            android:id="@+id/titleprice"
            android:layout_weight="1.75" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/finalList"
        android:layout_weight="1" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/total">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:id="@+id/textView"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:id="@+id/textView2"
            android:layout_weight="3" />

    </LinearLayout>

    <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/billCancel"
            android:id="@+id/billCancel"
            android:enabled="true"
            android:clickable="true"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/billConfirm"
            android:id="@+id/billConfirm"
            android:clickable="true"
            android:enabled="true"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>
